--- a/css/style.css
+++ b/css/style.css
@@ -30,13 +30,13 @@ h2 {
 	text-align: center;
 }
 
-#esquerda {
+#left {
 	width: 35%;
 	height: 500px;
 	float: left;
 }
 
-#direita {
+#right {
 	width: 65%;
 	height: 500px;
 	float: right;
@@ -55,7 +55,7 @@ tr, th {
 	border-radius: 10px;
 }
 
-tr#titulo {
+tr#title {
 	font-weight: bold;
 	background-color: rgba(0, 0, 0, 0.6);
 	color: #FFF;
@@ -80,7 +80,7 @@ a:hover {
 	border: 0.5px solid #777;
 }
 
-.aviso {
+.warning {
 	width: 90%;
 	height: 50px;
 	margin: 30px auto 0 auto;
